added raji mukhtar

--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
   </header>
 
   <main class="px-3">
-    <h1>About Emperor</h1>
-    <p class="lead">Name goes by Hassan Adeniyi, currently based in Ibadan,Nigeria. He uses combination of aesthetic and functional elements to develop and design websites and blogs, he determines the look of a website such as its colors, fonts, graphics and user interface. Today, creating a website is one of the pillars of having an online presence.</p>
+    <!-- <h1>About Emperor</h1> -->
+    <h1 style="font-size: 100px; font-family:   Geneva, Verdana, sans-serif;">ABOUT ME</h1>
+    <p class="lead">Hi, my name is Hassan Adeniyi, I'm a professional website developer in Nigeria. I specialize in website and application development user experience and creating identities and branding. i've worked with companies of all shapes and sizes. So contact me now if you'd like to work on your next project and developments.</p>
     <p class="lead">
       <a href="https://wa.me/+2348112022250" class="btn btn-lg btn-light fw-bold border-white bg-white">Hire Now!!!</a>
     </p>
