--- a/ppachievement.html
+++ b/ppachievement.html
@@ -251,19 +251,19 @@
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" src="one.JPG" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
         <h2 class="fw-normal">Mr Ganux</h2>
-        <p>Wow!!! I don't believw until i tried once with Mr Hassan.I did my salon site from him and have many revisits and customers worldwide.</p>
+        <p>"I never thought my project could turn out so amazing,I am so grateful for their expertise and attention to detail,They went above and beyond my expectations.</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" src="three.jpg" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Mrs Adekanmbi</h2>
-        <p>He's the best designer i've ever seen on earth. Did my portofolio, my business site and so on for me with a very small charge. </p>
+        <img class="bd-placeholder-img rounded-circle" src="mukhtar.jpg" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+        <h2 class="fw-normal">Mr Raji</h2>
+        <p>"I couldn't be happier with the results.I highly recommend this company to anyone looking for quality work,Emperor design was professional, efficient, and friendly." </p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" src="two.jpg" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
         <h2 class="fw-normal">Mr Hassan</h2>
-        <p>Great, This man is a master in BLOG. i tried hi once in 2021 and did very good , ever since then i know there's only one master.</p>
+        <p>"I couldn't be happier with the results.I highly recommend this company to anyone looking for quality work, I am so grateful for their expertise and attention to detail.</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
