--- a/contactus.html
+++ b/contactus.html
@@ -14,7 +14,7 @@
     }
   </style>
 </head>
-<body class="bg-info">
+<body class="bg-light text-dark">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top text-dark">
     <a class="navbar-brand text-dark" href="#"> <span class="text-info"> Emperor</span> <span class="-info"> Design</span></a>
@@ -38,7 +38,7 @@
       </ul>
     </div>
   </nav>
-  <div class="container">
+  <div class="container bg-light">
     <h1 class="mt-5">Hire Me</h1>
     <div class="row">
       <div class="col-md-6 offset-md-3 contact-form">
@@ -61,8 +61,8 @@
         </div>
   </div>
   <br><br><br><br>
-  <footer class="mt-auto text-center text-white-50 bg-info">
-    <p class="text-dark">Contact me on <a href="https://facebook.com/" class="text-white ">facebook </a>@ adekanmbihassanadeniyi.</p>
+  <footer class="mt-auto text-center text-white-50 ">
+    <p class="text-dark">Contact me on <a href="https://facebook.com/" class="text-info ">facebook </a>@ adekanmbihassanadeniyi.</p>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
