--- a/contactus.html
+++ b/contactus.html
@@ -3,69 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <title>Social Icons</title>
+  <!-- <link rel="stylesheet" href="npm i bootstrap-icons"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      padding-top: 50px;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #f0f0f0;
     }
-    .contact-form {
-      margin-top: 50px;
+
+    #social-icons {
+      position: fixed;
+      top: 50%;
+      right: 10px;
+      transform: translateY(-50%);
+    }
+
+    .social-icon {
+      margin-bottom: 10px;
+      display: none;
+    }
+
+    @keyframes blink {
+      50% {
+        opacity: 0;
+      }
     }
   </style>
 </head>
-<body class="bg-light text-dark">
+<body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top text-dark">
-    <a class="navbar-brand text-dark" href="#"> <span class="text-info"> Emperor</span> <span class="-info"> Design</span></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item ">
-          <a class="nav-link text-dark" href="portofolio.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-darkt" href="portofolioaboutme.html">About Us</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" href="portofolioachievement.html">Achievements</a>
-          </li>
-        <li class="nav-item">
-          <a class="nav-link text-dark" href="contactus.html">Hire Me</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="container bg-light">
-    <h1 class="mt-5">Hire Me</h1>
-    <div class="row">
-      <div class="col-md-6 offset-md-3 contact-form">
-        <form>
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Enter your name">
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter your email">
-          </div>
-          <div class="form-group">
-            <label for="message">Message</label>
-            <textarea class="form-control" id="message" rows="3" placeholder="Enter your message"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary"> <a href="http://wa.me/2348112022250"class="text-light"> Submit</a></button>
-        </form>
-      </div>  
-        </div>
-  </div>
-  <br><br><br><br>
-  <footer class="mt-auto text-center text-white-50 ">
-    <p class="text-dark">Contact me on <a href="https://facebook.com/" class="text-info ">facebook </a>@ adekanmbihassanadeniyi.</p>
-  </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<div id="social-icons">
+  <a href="https://twitter.com/YourTwitterHandle" target="_blank" class="social-icon bg-light text-info">
+  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="blue" class="bi bi-facebook" viewBox="0 0 16 16">
+    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+  </svg>
+</a>
+  <br>
+  <a href="https://twitter.com/YourTwitterHandle" target="_blank" class="social-icon bg-light text-success">
+    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentcolor" class="bi bi-facebook" viewBox="0 0 16 16">
+      <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+    </svg>
+  </a>
+  <br>
+  <a href="https://twitter.com/YourTwitterHandle" target="_blank" class="social-icon bg-dark text-light">  
+  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-twitter-x" viewBox="0 0 16 16">
+    <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865l8.875 11.633Z"/>
+  </svg>
+</a>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+  const socialIcons = document.querySelectorAll('.social-icon');
+
+  setInterval(() => {
+    socialIcons.forEach(icon => {
+      icon.style.display = icon.style.display === 'none' ? 'inline-block' : 'none';
+    });
+  }, 1000);
+</script>
+
 </body>
-</html>
