--- a/ppachievement.html
+++ b/ppachievement.html
@@ -25,6 +25,49 @@
 
 <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
+
+
+
+
+
+
+
+
+<style>
+   #social-icons {
+    position: fixed;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    border: none;
+  }
+
+  .social-icon {
+    margin-bottom: 10px;
+    display: none;
+    border: none;
+  }
+
+  @keyframes blink {
+    50% {
+      opacity: 0;
+    }
+  }
+</style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -204,7 +247,7 @@
           <div class="carousel-caption text-start">
             <h1 class="text-info">WHO?</h1>
             <p class="opacity-75">Hassan Adekanmbi , an expert in website designing and developing,creation of BLOG, and so on. He uses combination of aesthetic and functional elements to develop and design websites and blogs, he determines the look of a website such as its colors, fonts, graphics and user interface. Today, creating a website is one of the pillars of having an online presence.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Contact Today</a></p>
+            <p><a class="btn btn-lg btn-primary" href="new.html">Contact Today</a></p>
           </div>
         </div>
       </div>
@@ -214,7 +257,7 @@
           <div class="carousel-caption">
             <h1 class="text-info">WITH?</h1>
             <p>With the use of HTML, CSS, javascript. Your personal websites and portofolio will be brought to live by us.This page was last modified on Jul 17, 2023 by MDN contributors. HTML (HyperText Markup Language) is the most basic building block of the Web. It defines the meaning and structure of web content. Other technologies besides HTML are generally used to describe a web page's appearance/presentation (CSS). </p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+            <p><a class="btn btn-lg btn-primary" href="album.html">Learn more</a></p>
           </div>
         </div>
       </div>
@@ -256,7 +299,7 @@
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" src="mukhtar.jpg" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Mr Raji</h2>
+        <h2 class="fw-normal">Alhaji Raji</h2>
         <p>"I couldn't be happier with the results.I highly recommend this company to anyone looking for quality work,Emperor design was professional, efficient, and friendly." </p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
@@ -317,6 +360,57 @@
   </footer>
 </main>
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div id="social-icons">
+  <a href="#" target="_blank" class="social-icon bg-light text-info">
+  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="blue" class="bi bi-facebook" viewBox="0 0 16 16">
+    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+  </svg>
+</a>
+  <br>
+  <a href="https://wa.me/+2348112022250?text=Hello+Mr+Hassan+I+am+...+from+...+Need+help+in+building+my+...#" target="_blank" class="social-icon bg-light text-success">
+    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentcolor" class="bi bi-facebook" viewBox="0 0 16 16">
+      <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+    </svg>
+  </a>
+  <br>
+  <a href="#" target="_blank" class="social-icon bg-dark text-light">  
+  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-twitter-x" viewBox="0 0 16 16">
+    <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865l8.875 11.633Z"/>
+  </svg>
+</a>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+  const socialIcons = document.querySelectorAll('.social-icon');
+
+  setInterval(() => {
+    socialIcons.forEach(icon => {
+      icon.style.display = icon.style.display === 'none' ? 'inline-block' : 'none';
+    });
+  }, 1000);
+</script>
+
+
+
+
 
     </body>
     
